# $Id$
Version 0.5.0-beta (latest)
* BACKWARD COMPATIBILITY BREAK: DNS TXT records now store their data in the new
  DNSTXT attribute instead of the old DNScname attribute.  You must manually
  update any DNS TXT records for them to continue working.

Version 0.4.2
* Add SMF manifest
* Add manpage
* Ensure all options get initialized to defaults before any attempts at setting
  them via configuration, environment, or cmdline args.
* Allow all cmdline args to be set optionally using environment variables
* Updated documentation and added plaintext version
* Add output of TTL on individual records when using BIND outputs
* Fix FQDN output of SRV records when using BIND outputs

Version 0.4.1 - 2006/10/19
* Updated scripts/data2ldif.pl to properly handle reverse domains
* Fixed parser bugs in scripts/data2ldif.pl (Thanks Fleischmann Bonaventura and
  Adrian Goins)
* Added missing option -M (Thanks Jason Chambers)
* Change default record limit to LDAP_NO_LIMIT
* Tightned up LDAP search scope when calculating the checksum (Thanks Jason
  Chambers for the bug report)
* Fixed bug reading the LDAP bind password out of the environment (Thanks Nick
  Gregory for the bug report)
* Updated FAQ

Version 0.4.0 - 2006/06/17
+ Corrected segfault when using BIND output with SRV records (Thanks Fred Leitz)
+ Fixed off-by-one string termination problem
+ Fixed a number of possible segfaults if required cmdline options were missing
  Thanks Steve Ayotte (sayotte.alkaloid.net)
+ Added more verbose LDAP error and sanity checking output
+ Replaced all deprecated LDAP API calls
+ Converted to getopt_long and added double-dash options (--help)
+ Added search timeout and max record count options
+ Added warnings when zero records are returned from searches

Version 0.3.7 - Unreleased.
+ Changed default location of ldap.conf to /etc/ldap.conf
+ Added note on potential security vulns in deprecated/webadmin to README
+ Changed port declarations/format strings from int to unsigned short